--- a/6.Font Properties/font.html
+++ b/6.Font Properties/font.html
@@ -36,3 +36,27 @@
     <h2>ZAFAR</h2>
 </body>
 </html>
+
+
+Grandfather 
+
+|
+|
+|
+|
+|
+
+You
+
+
+5 Name : 
+
+2  : direct 
+2  : google 
+1  : new fonts
+
+
+
+
+
+
