--- a/6.Font Properties/font.html
+++ b/6.Font Properties/font.html
@@ -12,6 +12,10 @@
             font-family: Zafar;
             src: url('Bastliga\ One.ttf');
         }
+        @font-face {
+            font-family: Zfnan;
+            src: url('Rock\ Bottom.ttf');
+        }
         p{
             color: blue;
             font-size: large;
@@ -27,17 +31,20 @@
         h2{
             font-family: "Zafar";
         }
+        h3{
+            font-family: Zfnan;
+        }
     </style>
 </head>
 <body>
-    
     <p>lorem</p>
     <h1>HTML</h1>
     <h2>ZAFAR</h2>
+    <h3>sdrtgh</h3>
 </body>
 </html>
 
-
+<!-- 
 Grandfather 
 
 |
@@ -59,4 +66,4 @@ You
 
 
 
-
+ -->
