--- a/13.Flex/flex.html
+++ b/13.Flex/flex.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex</title>
-    <link rel="stylesheet" href="flex.css">
+    <!-- <link rel="stylesheet" href="flex.css"> -->
+     <link rel="stylesheet" href="flex2.css">
+     
 </head>
 <body>
     <section>
         <div class="box1">Box1</div>
         <div class="box2">Box2</div>
-        <div class="box3">Box3</div>
+        <h2 class="box3">Box3</h2>
         <div class="box4">Box4</div>
         <div class="box5">Box5</div>
         <div class="box6">Box6</div>
