--- a/Object-fit/objectfit.html
+++ b/Object-fit/objectfit.html
@@ -36,18 +36,40 @@
         body{
             background-color: lightcoral;
         }
-        img{
+        /* img{
             width: 200px;
             height: 25px;
             background-color: aqua;
             object-fit: cover;
             object-position: 0% 100%;
-        }
+        } */
+         div{
+            display: inline-block;
+            background-color: aqua;
+         }
+         img{
+            display: block;
+            width: 200px;
+            height: 200px;
+            position: absolute;
+            top: 200px;
+            left: 200px;
+            border: 5px solid;
+         }
+        .cover:hover ~img{
+    
+            object-fit: cover;
+         }
     </style>
 </head>
 <body>
-    <img src="https://www.pagani.com/app/themes/pagani/assets/images/header-logo.png" alt="">
-    <!-- <img src="https://imgs.search.brave.com/Dc5ZHxcKwEyLNhxJW_FX893dO9jOrM5Np0beMSETNKI/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5pc3RvY2twaG90/by5jb20vaWQvMTU5/MzcxNzkxL3Bob3Rv/L3Rhai1tYWhhbC1p/bmRpYS5qcGc_cz02/MTJ4NjEyJnc9MCZr/PTIwJmM9TTVqNVdP/Ti1zYjVJYmVGeEU4/d0kzQ1JoRjFsWU8y/UWVGd0diSU1ZZzZm/Yz0" alt=""> -->
+    <section>
+        <div class="cover">cover</div>
+        <div>contains</div>
+
+        <img src="https://imgs.search.brave.com/Dc5ZHxcKwEyLNhxJW_FX893dO9jOrM5Np0beMSETNKI/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5pc3RvY2twaG90/by5jb20vaWQvMTU5/MzcxNzkxL3Bob3Rv/L3Rhai1tYWhhbC1p/bmRpYS5qcGc_cz02/MTJ4NjEyJnc9MCZr/PTIwJmM9TTVqNVdP/Ti1zYjVJYmVGeEU4/d0kzQ1JoRjFsWU8y/UWVGd0diSU1ZZzZm/Yz0" alt="">
+    </section>
+    <!-- <img src="https://www.pagani.com/app/themes/pagani/assets/images/header-logo.png" alt=""> -->
 </body>
 </html>
 
